--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
@@ -27,6 +27,6 @@
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <script src="atm.js"></script>
+    <script defer src="app.js"></script>
   </body>
 </html>
