--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input class="depositCheckingExchange" type="button" value="Deposit" />
+      <input class="withdrawCheckingExchange" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input class="depositSavingExchange" type="button" value="Deposit" />
+      <input class="withdrawSavingExchange" type="button" value="Withdraw" />
     </div>
 
     <script defer src="app.js"></script>
