--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <div class="header">
@@ -15,18 +20,17 @@
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="depositCheckingExchange" type="button" value="Deposit" />
-      <input class="withdrawCheckingExchange" type="button" value="Withdraw" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="depositSavingExchange" type="button" value="Deposit" />
-      <input class="withdrawSavingExchange" type="button" value="Withdraw" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
-    <script defer src="app.js"></script>
   </body>
 </html>
